Fixed Leader Tools button overlap (5772) and stretched download button (5775)
- added min-width for download resource button
- added padding-left for leader tools

Fixed problem on Groups- Leader Tools- Button Lands on Homepage (5655)

- changed comparison from groupAdmin === true to groupAdmin[ 0 ] === true

--- a/css/groups.less
+++ b/css/groups.less
@@ -83,6 +83,10 @@
 				float       : left;
 				margin-left : 8px;
 			}
+
+			.btn-leader-tools {
+				margin-left : 10px;
+			}
 		}
 
 	}
@@ -169,6 +173,10 @@
 
 					.hidden {
 						display : none;
+					}
+
+					.resource-download {
+						min-width : 100px;
 					}
 
 				}
